# tr-tools

./: README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx  bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: err.rs  lib.rs  main.rs  utils.rs
src-tauri/src/route/: router.rs
src/components/: AboutView.tsx  HelpView.tsx  utils.ts
src/components/media/: mediaStore.ts
src/components/media/music_player/: AudioView.tsx  MusicPlayListRowView.tsx  MusicPlayerView.css  MusicPlayerView.tsx  musicPlayListStore.ts  selectedMusicPlayListStore.ts
src/components/mosaic/: MosaicView.css  MosaicView.tsx  mosaicStore.ts
