[package]
name = "tr-tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable", "config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1.3.1"
mime = "0.3.17"
matchit = "0.8.6"
urlencoding = "2.1.3"
thiserror = "2.0.16"
tauri-plugin-dialog = "2"
specta = "2.0.0-rc.22"
tauri-specta = { version="2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta-typescript = "0.0.9"
windows = { version = "0.62.1", features = ["Win32_Storage", "Win32_Storage_FileSystem", "Win32", "Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
